# helm

./: .gitignore  CMakeLists.txt  README.md  common.cmake
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
src/: CMakeLists.txt
src/common/: border_bounds_constrainer.cpp  border_bounds_constrainer.h  file_list_box_model.cpp  file_list_box_model.h  load_save.cpp  load_save.h  midi_manager.cpp  midi_manager.h  startup.cpp  startup.h  synth_base.cpp  synth_base.h  synth_gui_interface.cpp  synth_gui_interface.h
src/editor_components/: bpm_slider.cpp  bpm_slider.h  filter_response.cpp  filter_response.h  filter_selector.cpp  filter_selector.h  formant_response.cpp  formant_response.h  global_tool_tip.cpp  global_tool_tip.h  graphical_envelope.cpp  graphical_envelope.h  graphical_step_sequencer.cpp  graphical_step_sequencer.h  midi_keyboard.cpp  midi_keyboard.h  modulation_button.cpp  modulation_button.h  modulation_highlight.cpp  modulation_highlight.h  modulation_meter.cpp  modulation_meter.h  modulation_slider.cpp  modulation_slider.h  open_gl_background.cpp  open_gl_background.h  open_gl_component.cpp  open_gl_component.h  open_gl_envelope.cpp  open_gl_envelope.h  open_gl_modulation_meter.cpp  open_gl_modulation_meter.h  open_gl_oscilloscope.cpp  open_gl_oscilloscope.h  open_gl_peak_meter.cpp  open_gl_peak_meter.h  open_gl_wave_viewer.cpp  open_gl_wave_viewer.h  oscilloscope.cpp  oscilloscope.h  (+21 more)
src/editor_sections/: about_section.cpp  about_section.h  arp_section.cpp  arp_section.h  bpm_section.cpp  bpm_section.h  contribute_section.cpp  contribute_section.h  delay_section.cpp  delay_section.h  delete_section.cpp  delete_section.h  distortion_section.cpp  distortion_section.h  dynamic_section.cpp  dynamic_section.h  envelope_section.cpp  envelope_section.h  extra_mod_section.cpp  extra_mod_section.h  feedback_section.cpp  feedback_section.h  filter_section.cpp  filter_section.h  formant_section.cpp  formant_section.h  formant_tuner.cpp  formant_tuner.h  full_interface.cpp  full_interface.h  lfo_section.cpp  lfo_section.h  mixer_section.cpp  mixer_section.h  modulation_manager.cpp  modulation_manager.h  noise_section.cpp  noise_section.h  open_gl_modulation_manager.cpp  open_gl_modulation_manager.h  (+24 more)
src/look_and_feel/: browser_look_and_feel.cpp  browser_look_and_feel.h  colors.cpp  colors.h  default_look_and_feel.cpp  default_look_and_feel.h  fonts.cpp  fonts.h  modulation_look_and_feel.cpp  modulation_look_and_feel.h  text_look_and_feel.cpp  text_look_and_feel.h
src/plugin/: helm_editor.cpp  helm_editor.h  helm_plugin.cpp  helm_plugin.h  value_bridge.h
src/standalone/: helm_computer_keyboard.cpp  helm_computer_keyboard.h  helm_editor.cpp  helm_editor.h  main.cpp
